--- a/mympd/PKGBUILD
+++ b/mympd/PKGBUILD
@@ -5,15 +5,15 @@
 
 pkgname=mympd
 _pkgname=myMPD
-pkgver=6.11.0
+pkgver=6.11.1
 pkgrel=1
 pkgdesc="A standalone and mobile friendly web-based MPD client."
 arch=('x86_64' 'armv7h' 'aarch64')
 url="https://jcorporation.github.io/myMPD/"
-license=('GPL')
-depends=('openssl' 'libid3tag' 'flac' 'lua' 'pcre')
-makedepends=('cmake' 'pkgconf')
-optdepends=()
+license=('GPL2')
+depends=(pcre)
+makedepends=('cmake' 'perl')
+optdepends=('openssl' 'libid3tag' 'flac' 'lua')
 provides=()
 conflicts=()
 replaces=()
@@ -22,7 +22,7 @@ install=mympd.install
 source=("https://github.com/jcorporation/${_pkgname}/archive/v${pkgver}.tar.gz"
         'mympd.install'
         'mympd.sysusers')
-sha256sums=('0f9bf16bc516eb60b2609c773416dd7f89c8991e49b17b8bffe76f68e75453ca'
+sha256sums=('a1e88697fbc5775297206907925deef6155b3a7575607037dace698d2e214fd8'
             'f32bfd3959be6ffbad555ea439d920f11d9293b104e87437b90093f794f750b3'
             '82894a939c6adbfd5c719615adefb9a54ded1c221dbbd12b9a46cd90e1be8d8c')
 
