Correction: update licenses libnpupnp upmpdcli

--- a/libnpupnp/PKGBUILD
+++ b/libnpupnp/PKGBUILD
@@ -11,7 +11,7 @@ pkgrel=1
 pkgdesc="an UPnP library derived from the venerable pupnp"
 url="http://www.lesbonscomptes.com/upplay/downloads.html"
 arch=('x86_64' 'armv7h' 'aarch64')
-license=(GPL2)
+license=(LGPLv2.1)
 depends=(expat libmicrohttpd)
 source=("http://www.lesbonscomptes.com/upmpdcli/downloads/${pkgname}-${pkgver}.tar.gz")
 sha256sums=('03506f02546e3b3d31b389e046c4691f020b82d315426ce79f1e2b1eb7958656')
