--- a/mpdscribble/PKGBUILD
+++ b/mpdscribble/PKGBUILD
@@ -9,13 +9,13 @@
 
 pkgname=mpdscribble
 pkgver=0.23
-pkgrel=1
+pkgrel=2
 pkgdesc='MPD client which submits track info to {Libre,Last}.fm'
 url="http://www.musicpd.org/"
 arch=('x86_64' 'armv7h' 'aarch64')
 license=('GPL2')
-depends=('curl' 'libgcrypt' 'libmpdclient')
-makedepends=('boost' 'meson' 'ninja')
+depends=('curl' 'libmpdclient')
+makedepends=('boost' 'systemd' 'meson' 'ninja')
 backup=("etc/${pkgname}.conf")
 source=("https://www.musicpd.org/download/${pkgname}/${pkgver}/${pkgname}-${pkgver}.tar.xz"{,.sig}
         "${pkgname}.conf"
