--- a/mpdscribble/PKGBUILD
+++ b/mpdscribble/PKGBUILD
@@ -9,12 +9,12 @@
 
 pkgname=mpdscribble
 pkgver=0.23
-pkgrel=2
+pkgrel=3
 pkgdesc='MPD client which submits track info to {Libre,Last}.fm'
 url="http://www.musicpd.org/"
 arch=('x86_64' 'armv7h' 'aarch64')
 license=('GPL2')
-depends=('curl' 'libmpdclient')
+depends=('curl' 'libgcrypt' 'libmpdclient')
 makedepends=('boost' 'systemd' 'meson' 'ninja')
 backup=("etc/${pkgname}.conf")
 source=("https://www.musicpd.org/download/${pkgname}/${pkgver}/${pkgname}-${pkgver}.tar.xz"{,.sig}
