--- a/mympd/PKGBUILD
+++ b/mympd/PKGBUILD
@@ -5,7 +5,7 @@
 
 pkgname=mympd
 _pkgname=myMPD
-pkgver=8.0.4
+pkgver=8.1.0
 pkgrel=1
 pkgdesc="A standalone and mobile friendly web-based MPD client."
 arch=('x86_64' 'armv7h' 'aarch64')
@@ -21,12 +21,13 @@ install=mympd.install
 source=("https://github.com/jcorporation/${_pkgname}/archive/v${pkgver}.tar.gz"
         'mympd.install'
         'mympd.sysusers')
-sha256sums=('acb30bea05060b632235fce64aca797315c4ef1dc6b61530353b591ddae6a8a6'
+sha256sums=('02841896b7968eeb366dcea8d242b4a23dc44d467103377f624f40435cd3cc8c'
             '7c126fd0c8bccebdf0b3359751296953828533e16187df33611686e5e40b5cb5'
             '82894a939c6adbfd5c719615adefb9a54ded1c221dbbd12b9a46cd90e1be8d8c')
 
 build() {
   cd "${srcdir}/${_pkgname}-${pkgver}" || exit 1
+  install -d release
   ./build.sh createassets
   cd release || exit 1
   cmake -DCMAKE_INSTALL_PREFIX:PATH=/usr -DCMAKE_BUILD_TYPE=RELEASE ..
@@ -35,9 +36,9 @@ build() {
 
 package() {
   cd "${srcdir}/${_pkgname}-${pkgver}/release"
+  make DESTDIR="$pkgdir/" install
 
-  install -D -m 644 "${srcdir}/mympd.sysusers" "${pkgdir}/usr/lib/sysusers.d/mympd.conf"
+  install -Dm644 "${srcdir}/mympd.sysusers" "${pkgdir}/usr/lib/sysusers.d/mympd.conf"
   install -dm755 "$pkgdir"/var/lib/${pkgname}
 
-  make DESTDIR="$pkgdir/" install
 }
