--- a/mpd-essential/PKGBUILD
+++ b/mpd-essential/PKGBUILD
@@ -11,7 +11,7 @@
 
 pkgname=mpd-essential
 _pkgname=mpd
-pkgver=0.22.11
+pkgver=0.23
 pkgrel=1
 pkgdesc="Flexible, powerful, server-side application for playing music built with essential components."
 url="http://www.musicpd.org/"
@@ -20,22 +20,23 @@ arch=('x86_64' 'armv7h' 'aarch64')
 depends=('gcc-libs' 'glibc' 'lame' 'libgcrypt' 'libmad' 'libshout'
          'libsoxr' 'opus' 'sqlite' 'wavpack' 'zlib')
 makedepends=('alsa-lib' 'audiofile' 'avahi' 'boost' 'curl' 'dbus' 'expat' 'faad2'
-             'ffmpeg' 'flac' 'icu' 'libid3tag' 'libmpdclient' 'libogg' 'libupnp'
-             'liburing' 'libvorbis' 'meson' 'python-sphinx' 'systemd-libs' 'yajl')
+             'ffmpeg' 'flac' 'fmt' 'icu' 'libid3tag' 'libmpdclient' 'libogg'
+             'libopenmpt' 'libupnp' 'liburing' 'libvorbis' 'meson' 'python-sphinx' 
+             'systemd-libs' 'yajl')
 provides=("mpd=$pkgver")
 conflicts=('mpd')
 replaces=('mpd')
 backup=("etc/${_pkgname}.conf")
-source=("https://www.musicpd.org/download/${_pkgname}/${pkgver%.*}/${_pkgname}-${pkgver}.tar.xz"{,.sig}
+source=("https://www.musicpd.org/download/${_pkgname}/${pkgver}/${_pkgname}-${pkgver}.tar.xz"{,.sig}
         "${_pkgname}.conf"
         "${_pkgname}.sysusers"
         "${_pkgname}.tmpfiles")
-sha512sums=('c53d386d42c2360502aad5e7574ae5ff76a20df037696989f9e1700f9cffb88afdd329cce758067356c59308d0cbcf3ba3ccf6f013e2fcec54ddf08bd0212b43'
+sha512sums=('9602a76e08fbbb6e415e6e7e868f9647bcf5eb510a35cf369a64eeaff35d1c0f95b7bea7a8c2d14163994c78ab612ad32226948a4abeb021d23b7fb4c974e004'
             'SKIP'
             'e1f2cede2aae5500bc473c8a95df28134015fa99b6af781bfe2b5ef57f4624fd4e2e4477d690a6147becab9079934cfe42f1603daa69930a0d9e97393f6f167b'
             '6e467481406279767b709ec6d5c06dbd825c0de09045c52ffa2d21d0604dcfe19b7a92bf42bed25163d66a3a0d1dbde6185a648b433eaf5eac56be90491e2e18'
             'db473db27cd68994c3ee26e78e0fb34d13126301d8861563dcc12a22d62ecb14c4ffb1e0798c6aaccdff34e73bae3fbeeff7b42606c901a2d35e278865cdf35d')
-b2sums=('b47dcbd1e01812b66c81f33a53fc0838ddb8b7a145763744d1cf1aacc7ca38e763b723498f3ab7360f49637bc80c0ada5a69c7d619f3cf167071a7bec2440d20'
+b2sums=('a7a3b5a66de7c417cec54c270c654bb6bf5552a6e1a527aadbe6daf7aa2451e9ac581f3c83b7d782b97f35ba169b9f1b64ddc752d8242513d67af7ea13732734'
         'SKIP'
         '77102efd67d46f6887057aee0fd3b19582b08219be7b0aa8db47f0094e1f062fbd8eb98c9f4c9ea35be7823653c54280bc5f62e62a4eb62321e9c12507acaeaf'
         '4ab6e415284c77802a39d0913d701fe55e56f3c22b19557661fbef77e456b5e1d151da4202695282b956602e716a7afdb994aa2fc17368b9a0d0d051d47a3afb'
@@ -92,6 +93,7 @@ build() {
         -D jack=disabled \
         -D openal=disabled \
         -D oss=disabled \
+        -D pipewire=disabled \
         -D pulse=disabled \
         -D recorder=false \
        build
@@ -106,10 +108,10 @@ check() {
 package() {
   depends+=('libFLAC.so' 'libasound.so' 'libaudiofile.so' 'libavahi-client.so'
             'libavahi-common.so' 'libavcodec.so' 'libavformat.so' 'libavutil.so'
-            'libcurl.so' 'libdbus-1.so' 'libexpat.so' 'libfaad.so' 'libicui18n.so'
-            'libicuuc.so' 'libid3tag.so' 'libmpdclient.so' 'libogg.so' 'libsystemd.so'
-            'libupnp.so' 'liburing.so' 'libvorbis.so' 'libvorbisenc.so' 'libyajl.so'
-            'libavfilter.so' 'libixml.so')
+            'libcurl.so' 'libdbus-1.so' 'libexpat.so' 'libfaad.so' 'libfmt.so' 
+            'libicui18n.so' 'libicuuc.so' 'libid3tag.so' 'libmpdclient.so' 'libogg.so'
+            'libopenmpt.so' 'libsystemd.so' 'libupnp.so' 'liburing.so' 'libvorbis.so' 
+            'libvorbisenc.so' 'libyajl.so' 'libavfilter.so' 'libixml.so')
   cd "${_pkgname}-${pkgver}"
   DESTDIR="${pkgdir}" ninja -C build install
   install -vDm 644 "doc/${_pkgname}conf.example" \
