mpd-essential: rebuild using arch-meson

--- a/mpd-essential/PKGBUILD
+++ b/mpd-essential/PKGBUILD
@@ -12,7 +12,7 @@
 pkgname=mpd-essential
 _pkgname=mpd
 pkgver=0.23.1
-pkgrel=1
+pkgrel=2
 pkgdesc="Flexible, powerful, server-side application for playing music built with essential components."
 url="http://www.musicpd.org/"
 license=('GPL2')
@@ -54,19 +54,12 @@ build() {
   # NOTE: sndio conflicts with alsa
   # NOTE: nfs supports only NFS version 3.
   # NOTE: vorbisenc enabled until opus displays streams tags properly in icecast
-  meson --prefix /usr \
-        --libexecdir lib \
-        --sbindir bin \
-        --buildtype plain \
-        --auto-features enabled \
-        --wrap-mode nodownload \
-        -D b_lto=true \
-        -D b_pie=true \
-        -D documentation=enabled \
+  arch-meson -D documentation=enabled \
         -D adplug=disabled \
         -D sndio=disabled \
         -D shine=disabled \
         -D tremor=disabled \
+        -D b_ndebug=true \
         -D chromaprint=disabled \
         -D ipv6=disabled \
         -D webdav=disabled \
