--- a/ffmpeg-rpi-audio/PKGBUILD
+++ b/ffmpeg-rpi-audio/PKGBUILD
@@ -9,7 +9,7 @@
 
 _pkgname=ffmpeg
 pkgname=ffmpeg-rpi-audio
-pkgver=4.4
+pkgver=4.4.1
 pkgrel=1
 epoch=1
 pkgdesc='The FFmpeg minimal audio toolkit optimized for headless raspberry pi systems'
@@ -51,11 +51,11 @@ replaces=(
   ffmpeg
   ffmpeg-archphile
 )
-_tag=dc91b913b6260e85e1304c74ff7bb3c22a8c9fb1
+_tag=7e0d640edf6c3eee1816b105c2f7498c4f948e74
 source=(
   git+https://git.ffmpeg.org/ffmpeg.git#tag=${_tag}
 )
-sha256sums=(SKIP)
+sha256sums=('SKIP')
 
 pkgver() {
   cd ${_pkgname}
