--- a/mpd-essential/PKGBUILD
+++ b/mpd-essential/PKGBUILD
@@ -11,32 +11,31 @@
 
 pkgname=mpd-essential
 _pkgname=mpd
-pkgver=0.23.4
+pkgver=0.23.5
 pkgrel=1
 pkgdesc="Flexible, powerful, server-side application for playing music built with essential components."
-url="http://www.musicpd.org/"
-license=('GPL2')
-arch=('x86_64' 'armv7h' 'aarch64')
-depends=('gcc-libs' 'glibc' 'lame' 'libgcrypt' 'libmad' 'libshout'
-         'libsoxr' 'opus' 'sqlite' 'wavpack' 'zlib')
-makedepends=('alsa-lib' 'audiofile' 'avahi' 'boost' 'curl' 'dbus' 'expat' 'faad2'
-             'ffmpeg' 'flac' 'fmt' 'icu' 'libid3tag' 'libmpdclient' 'libogg'
-             'libopenmpt' 'libupnp' 'liburing' 'libvorbis' 'meson' 'python-sphinx' 
-             'systemd-libs' 'yajl')
+arch=(x86_64 armv7h aarch64)
 provides=("mpd=$pkgver")
-conflicts=('mpd')
-replaces=('mpd')
+conflicts=(mpd)
+replaces=(mpd)
+url="http://www.musicpd.org/"
+license=(GPL2)
+depends=(gcc-libs glibc lame libgcrypt libmad libshout
+         libsoxr opus sqlite wavpack zlib)
+makedepends=(alsa-lib audiofile avahi boost curl dbus expat faad2 ffmpeg
+             flac fmt icu libid3tag libmpdclient libogg libopenmpt libupnp
+             liburing libvorbis meson python-sphinx systemd-libs yajl)
 backup=("etc/${_pkgname}.conf")
 source=("https://www.musicpd.org/download/${_pkgname}/${pkgver%.*}/${_pkgname}-${pkgver}.tar.xz"{,.sig}
         "${_pkgname}.conf"
         "${_pkgname}.sysusers"
         "${_pkgname}.tmpfiles")
-sha512sums=('fb476b108a7be842663683fe6ca6737cffad73c0f09874f9d052121d188d16f69b144e993d1691f2edfac713db24aa3c28302b399f4720b29c09c909860c0938'
+sha512sums=('3a870e79bb82c9e8877958d271e933daa3dd970a4510aff4aeea91feab521d7927cd59c7f1ea16a36e84ff879e4f24e4347602ac449c5da31853acb5a3b46f34'
             'SKIP'
             'e1f2cede2aae5500bc473c8a95df28134015fa99b6af781bfe2b5ef57f4624fd4e2e4477d690a6147becab9079934cfe42f1603daa69930a0d9e97393f6f167b'
             '6e467481406279767b709ec6d5c06dbd825c0de09045c52ffa2d21d0604dcfe19b7a92bf42bed25163d66a3a0d1dbde6185a648b433eaf5eac56be90491e2e18'
             'db473db27cd68994c3ee26e78e0fb34d13126301d8861563dcc12a22d62ecb14c4ffb1e0798c6aaccdff34e73bae3fbeeff7b42606c901a2d35e278865cdf35d')
-b2sums=('34ea3f0065edcb26e57350a9cdfc79e8705674a4811b06ff4dfa0a93a1c92bcfae7c9e6ae208210289a1f11fac079aa53ad34a3b317fd5dbe4c6d522883b6623'
+b2sums=('91f0d37bca0632a414083f6ecf8838ba5dc4ef4965692b14e56587d3d145140f61bcc120fe4b2bf83eb41f2a7e085da4d999efc19ca9717d2552d92fc6359c65'
         'SKIP'
         '77102efd67d46f6887057aee0fd3b19582b08219be7b0aa8db47f0094e1f062fbd8eb98c9f4c9ea35be7823653c54280bc5f62e62a4eb62321e9c12507acaeaf'
         '4ab6e415284c77802a39d0913d701fe55e56f3c22b19557661fbef77e456b5e1d151da4202695282b956602e716a7afdb994aa2fc17368b9a0d0d051d47a3afb'
@@ -99,12 +98,12 @@ check() {
 }
 
 package() {
-  depends+=('libFLAC.so' 'libasound.so' 'libaudiofile.so' 'libavahi-client.so'
-            'libavahi-common.so' 'libavcodec.so' 'libavformat.so' 'libavutil.so'
-            'libcurl.so' 'libdbus-1.so' 'libexpat.so' 'libfaad.so' 'libfmt.so' 
-            'libicui18n.so' 'libicuuc.so' 'libid3tag.so' 'libmpdclient.so' 'libogg.so'
-            'libopenmpt.so' 'libsystemd.so' 'libupnp.so' 'liburing.so' 'libvorbis.so' 
-            'libvorbisenc.so' 'libyajl.so' 'libavfilter.so' 'libixml.so')
+  depends+=(libFLAC.so libasound.so libaudiofile.so libavahi-client.so
+            libavahi-common.so libavcodec.so libavformat.so libavutil.so
+            libcurl.so libdbus-1.so libexpat.so libfaad.so libfmt.so 
+            libicui18n.so libicuuc.so libid3tag.so libmpdclient.so libogg.so
+            libopenmpt.so libsystemd.so libupnp.so liburing.so libvorbis.so 
+            libvorbisenc.so libyajl.so libavfilter.so libixml.so)
   cd "${_pkgname}-${pkgver}"
   DESTDIR="${pkgdir}" ninja -C build install
   install -vDm 644 "doc/${_pkgname}conf.example" \
