--- a/upmpdcli/PKGBUILD
+++ b/upmpdcli/PKGBUILD
@@ -6,21 +6,25 @@
 # Contributor: Tilman Vatteroth <tilman.vatteroth [at] udo [dot] edu>
 
 pkgname=upmpdcli
-pkgver=1.5.12
+pkgver=1.5.13
 pkgrel=1
 pkgdesc="A UPnP Media Renderer front-end for the Music Player Daemon (MPD)"
-arch=('x86_64' 'armv7h' 'aarch64')
+arch=(x86_64 armv7h aarch64)
 url="http://www.lesbonscomptes.com/upmpdcli/"
-license=('LGPLv2.1')
-depends=('python' 'libmpdclient' 'libupnpp>=0.17.0' 'libmicrohttpd' 'jsoncpp' 'python-requests')
-makedepends=('python-setuptools' 'libmpdclient' 'libupnpp>=0.17.0' 'libmicrohttpd' 'jsoncpp' 'python-requests' 'recoll' 'python-bottle' 'python-mutagen' 'aspell-en' 'id3lib' 'python-waitress' 'sqlite')
-optdepends=('python2: OpenHome Radio Service' 'recoll: enable search' 'python-bottle: enable uprcl media server' 'python-mutagen: enable uprcl media server' 'mutagen: enable uprcl media server' 'aspell-en' 'id3lib' 'python-waitress: enable uprcl media server' 'sqlite')
+license=(GPL2)
+depends=(python libmpdclient libupnpp libmicrohttpd jsoncpp)
+makedepends=(python-setuptools python-requests python-bottle python-mutagen aspell-en id3lib python-waitress sqlite)
+optdepends=(aspell-en id3lib sqlite
+            'python-requests: enable search'
+            'python-bottle: enable uprcl media server'
+            'python-mutagen: enable uprcl media server' 
+            'python-waitress: enable uprcl media server')
 install=upmpdcli.install
 source=("http://www.lesbonscomptes.com/upmpdcli/downloads/${pkgname}-${pkgver}.tar.gz"
         'upmpdcli.service'
         'upmpdcli.conf'
         'archphile.png')
-sha256sums=('1d7b6ab360c2549a7e3eff4f261471761dd837e18327a3ca29de1981c090ff3b'
+sha256sums=('c7726f0d4062ae253159102e499759bd513d3c68bfe16c44997ee3fba35509f8'
             '7144c7f96942c758ffae26d64dc83bf7c2ba142c69d7f83afea5b2fe7ae886f8'
             '4ef07303a1aef48eb26c938951bc0f699d46c1600a5c0a877f4f984e701640cb'
             '3e6da9fc442b7bb798b6f3dd3b70ee854f1bbd177375ef47b302eeffdb0d6fd1')
