--- a/upmpdcli/PKGBUILD
+++ b/upmpdcli/PKGBUILD
@@ -7,7 +7,7 @@
 
 pkgname=upmpdcli
 pkgver=1.5.13
-pkgrel=1
+pkgrel=2
 pkgdesc="A UPnP Media Renderer front-end for the Music Player Daemon (MPD)"
 arch=(x86_64 armv7h aarch64)
 url="http://www.lesbonscomptes.com/upmpdcli/"
@@ -21,10 +21,12 @@ optdepends=(aspell-en id3lib sqlite
             'python-waitress: enable uprcl media server')
 install=upmpdcli.install
 source=("http://www.lesbonscomptes.com/upmpdcli/downloads/${pkgname}-${pkgver}.tar.gz"
+        'upmpdcli.install'
         'upmpdcli.service'
         'upmpdcli.conf'
         'archphile.png')
 sha256sums=('c7726f0d4062ae253159102e499759bd513d3c68bfe16c44997ee3fba35509f8'
+            '26e445afa98f8177ea5202717fe3ac1cda6bb3d4a234a943d918fde4b04bc697'
             '7144c7f96942c758ffae26d64dc83bf7c2ba142c69d7f83afea5b2fe7ae886f8'
             '4ef07303a1aef48eb26c938951bc0f699d46c1600a5c0a877f4f984e701640cb'
             '3e6da9fc442b7bb798b6f3dd3b70ee854f1bbd177375ef47b302eeffdb0d6fd1')
