--- a/mympd/PKGBUILD
+++ b/mympd/PKGBUILD
@@ -6,12 +6,12 @@
 pkgname=mympd
 _pkgname=myMPD
 pkgver=9.2.1
-pkgrel=1
+pkgrel=2
 pkgdesc="A standalone and mobile friendly web-based MPD client."
 arch=('x86_64' 'armv7h' 'aarch64')
 url="https://jcorporation.github.io/myMPD/"
 license=('GPL2')
-depends=('pcre' 'openssl' 'libid3tag' 'flac' 'lua')
+depends=('pcre2' 'openssl' 'libid3tag' 'flac' 'lua')
 makedepends=('cmake' 'perl')
 optdepends=()
 provides=()
