--- a/ffmpeg-rpi-audio/PKGBUILD
+++ b/ffmpeg-rpi-audio/PKGBUILD
@@ -1,4 +1,4 @@
-# Maintainer: robot <cultofrobots [at] protonmail [dot] com>
+  # Maintainer: robot <cultofrobots [at] protonmail [dot] com>
 # Website: https://github.com/CultofRobots
 # Based on ffmpeg-headless from AUR
 # Contributor: Maxime Gauduin <alucryd [at] archlinux [dot] org>
@@ -9,7 +9,7 @@
 
 _pkgname=ffmpeg
 pkgname=ffmpeg-rpi-audio
-pkgver=5.1
+pkgver=5.1.1
 pkgrel=1
 epoch=1
 pkgdesc='The FFmpeg minimal audio toolkit optimized for headless raspberry pi systems'
@@ -51,20 +51,21 @@ replaces=(
   ffmpeg
   ffmpeg-archphile
 )
-_tag=e0723b7e4e22492275d476fcd30d759e1198bc5b
+_tag=1bad30dbe34f2d100b43e8f773d3fe0b5eb23523
 source=(
   git+https://git.ffmpeg.org/ffmpeg.git#tag=${_tag}
 )
-sha256sums=('SKIP')
+b2sums=('SKIP')
+
+prepare() {
+  cd ${_pkgname}
+  git cherry-pick -n 412922cc6fa790897ef6bb2be5d6f9a5f030754d # remove default IPFS gateway
+}
 
 pkgver() {
   cd ${_pkgname}
 
   git describe --tags | sed 's/^n//'
-}
-
-prepare() {
-  cd ${_pkgname}
 }
 
 build() {
@@ -74,6 +75,9 @@ build() {
 
   ./configure \
     --prefix=/usr \
+    --disable-debug \
+    --disable-static \
+    --disable-stripping \
     --disable-htmlpages \
     --disable-podpages \
     --disable-txtpages \
