--- a/ffmpeg-rpi-audio/PKGBUILD
+++ b/ffmpeg-rpi-audio/PKGBUILD
@@ -10,7 +10,7 @@
 _pkgname=ffmpeg
 pkgname=ffmpeg-rpi-audio
 pkgver=5.1.1
-pkgrel=1
+pkgrel=2
 epoch=1
 pkgdesc='The FFmpeg minimal audio toolkit optimized for headless raspberry pi systems'
 arch=('x86_64' 'armv7h' 'aarch64')
@@ -51,15 +51,15 @@ replaces=(
   ffmpeg
   ffmpeg-archphile
 )
-_tag=1bad30dbe34f2d100b43e8f773d3fe0b5eb23523
+_tag=8536e629f0c35c0e8a2b67e65d3bc60a088fe413
 source=(
-  git+https://git.ffmpeg.org/ffmpeg.git#tag=${_tag}
+  git+https://git.ffmpeg.org/ffmpeg.git?signed#tag=${_tag}
 )
 b2sums=('SKIP')
+validpgpkeys=(DD1EC9E8DE085C629B3E1846B18E8928B3948D64) # Michael Niedermayer <michael@niedermayer.cc>
 
 prepare() {
   cd ${_pkgname}
-  git cherry-pick -n 412922cc6fa790897ef6bb2be5d6f9a5f030754d # remove default IPFS gateway
 }
 
 pkgver() {
