--- a/mympd/PKGBUILD
+++ b/mympd/PKGBUILD
@@ -5,14 +5,14 @@
 
 pkgname=mympd
 _pkgname=myMPD
-pkgver=9.5.4
-pkgrel=2
+pkgver=10.0.0
+pkgrel=1
 pkgdesc="A standalone and mobile friendly web-based MPD client."
 arch=('x86_64' 'armv7h' 'aarch64')
 url="https://jcorporation.github.io/myMPD/"
 license=('GPL3')
 depends=('pcre2' 'openssl' 'libid3tag' 'flac' 'lua')
-makedepends=('cmake' 'perl')
+makedepends=('cmake' 'perl' 'gzip' 'jq')
 optdepends=()
 provides=()
 conflicts=()
@@ -22,7 +22,7 @@ source=("https://github.com/jcorporation/${_pkgname}/archive/v${pkgver}.tar.gz"
         "${pkgname}.install"
         "${pkgname}.tmpfiles"
         "${pkgname}.sysusers")
-sha256sums=('ce502c62aabe18199f6cfc188d7ef35d0334facd57df561fd336a338f6b70af7'
+sha256sums=('aaada3cbb27049c75efb0a032b9d888eeb0a3438b27e180ceda0e368e1d66ad6'
             '2bf1eaae38740b3fd2c9dde574a8cba84e9b08c15e2f2468bcb4ecad2b9c0f11'
             '3e291b4ef2965594f0d972dd686fcc416b8beff428948bfda97d2972c4decab4'
             '82894a939c6adbfd5c719615adefb9a54ded1c221dbbd12b9a46cd90e1be8d8c')
