--- a/snapcast/PKGBUILD
+++ b/snapcast/PKGBUILD
@@ -6,7 +6,7 @@
 pkgname=snapcast
 _pkgname_snapos=snapos
 pkgver=0.27.0
-pkgrel=3
+pkgrel=4
 pkgdesc="Synchronous multi-room audio player"
 arch=('x86_64' 'armv7h' 'aarch64')
 url="https://github.com/badaix/snapcast"
@@ -53,7 +53,7 @@ build() {
         -DCMAKE_BUILD_TYPE=None \
         -DCMAKE_INSTALL_PREFIX=/usr \
         -Wno-dev
-  make -C build
+  cmake --build build
 }
 
 package() {
