--- a/mpd-essential/PKGBUILD
+++ b/mpd-essential/PKGBUILD
@@ -11,25 +11,25 @@
 
 pkgname=mpd-essential
 _pkgname=mpd
-pkgver=0.23.13
-pkgrel=3
+pkgver=0.23.14
+pkgrel=1
 pkgdesc="Flexible, powerful, server-side application for playing music built with essential components."
 arch=(x86_64 armv7h aarch64)
 provides=("mpd=$pkgver")
 conflicts=(mpd)
 replaces=(mpd)
 url="http://www.musicpd.org/"
-license=(GPL2)
+# NOTE: BSD-2-Clause license file currently missing: https://github.com/MusicPlayerDaemon/MPD/issues/1877
+license=(
+  BSD-2-Clause
+  GPL-2.0-or-later
+)
 depends=(
   gcc-libs
   glibc
-  lame
-  libgcrypt
   libmad
   libshout
   libsoxr
-  opus
-  sqlite
   wavpack
   zlib
 )
@@ -46,6 +46,7 @@ makedepends=(
   flac
   fmt
   icu
+  lame
   libid3tag
   libmpdclient
   libogg
@@ -54,8 +55,10 @@ makedepends=(
   liburing
   libvorbis
   meson
+  opus
   python-sphinx
-  systemd-libs
+  sqlite
+  systemd
   yajl
 )
 backup=("etc/$_pkgname.conf")
@@ -66,13 +69,13 @@ source=(
   $_pkgname.tmpfiles
   $_pkgname.service.override
 )
-sha512sums=('1ef2b3a2089aa6078a455e43a2fb9097dc0d5b27b170e6d64e416d5e82349a794eb0acf8db72a975ad024083e872e4a1bd0e0fd51302d327d373b61f01bb819d'
+sha512sums=('4d97b22c37ca8c0939830cd6497023d868005a123f866db594716027c590e2d1dffb65bbd3af41404dcc7c0249466192e457ae1ba80f1f95ff044516be4c99ae'
             'SKIP'
             'e1f2cede2aae5500bc473c8a95df28134015fa99b6af781bfe2b5ef57f4624fd4e2e4477d690a6147becab9079934cfe42f1603daa69930a0d9e97393f6f167b'
             '6e467481406279767b709ec6d5c06dbd825c0de09045c52ffa2d21d0604dcfe19b7a92bf42bed25163d66a3a0d1dbde6185a648b433eaf5eac56be90491e2e18'
             'db473db27cd68994c3ee26e78e0fb34d13126301d8861563dcc12a22d62ecb14c4ffb1e0798c6aaccdff34e73bae3fbeeff7b42606c901a2d35e278865cdf35d'
             'c1782b82f9db1d30aece43a07230c5d57370f2494a16e108af03815d83968805472f10f53ea5495cf0e08ff8f245430c3c3bc44025af43aaf9ecd12fcd6afc6c')
-b2sums=('02907f08cc504d0fbf703179b333b301c7ad8fc8535d85305faa7962dd7faa164f4492286902cb48eaf3db2a1445b541b1261c18a89ca8a73e80016af9581e26'
+b2sums=('c048f128111d1d65775c317182b91d113339a5b09d3005c320cc3b14a79b7c1da0d1ba3d53f6bf348a3a404ceea33c1ad2427225f4a1f3d1cde4a921e71d6e1c'
         'SKIP'
         '77102efd67d46f6887057aee0fd3b19582b08219be7b0aa8db47f0094e1f062fbd8eb98c9f4c9ea35be7823653c54280bc5f62e62a4eb62321e9c12507acaeaf'
         '4ab6e415284c77802a39d0913d701fe55e56f3c22b19557661fbef77e456b5e1d151da4202695282b956602e716a7afdb994aa2fc17368b9a0d0d051d47a3afb'
@@ -118,7 +121,6 @@ build() {
     -D recorder=false
   )
 
-
   # NOTE: sndio conflicts with alsa
   # TODO: package adplug
   # TODO: package shine
@@ -143,6 +145,7 @@ package() {
     flac libFLAC.so
     fmt libfmt.so
     icu libicui18n.so libicuuc.so
+    lame libmp3lame.so
     libid3tag libid3tag.so
     libmpdclient libmpdclient.so
     libogg libogg.so
@@ -150,6 +153,8 @@ package() {
     libupnp libixml.so libupnp.so
     liburing liburing.so
     libvorbis libvorbis{,enc}.so
+    opus libopus.so
+    sqlite libsqlite3.so
     systemd-libs libsystemd.so
     yajl libyajl.so
   )
