--- a/upmpdcli/PKGBUILD
+++ b/upmpdcli/PKGBUILD
@@ -6,27 +6,46 @@
 # Contributor: Tilman Vatteroth <tilman.vatteroth [at] udo [dot] edu>
 
 pkgname=upmpdcli
-pkgver=1.8.3
+pkgver=1.8.6
 pkgrel=1
 pkgdesc="A UPnP Media Renderer front-end for the Music Player Daemon (MPD)"
 arch=(x86_64 armv7h aarch64)
 url="http://www.lesbonscomptes.com/upmpdcli/"
 license=(GPL2)
-depends=(python libmpdclient libupnpp libmicrohttpd jsoncpp)
-makedepends=(python-setuptools python-requests python-bottle python-mutagen aspell-en id3lib python-waitress sqlite)
-optdepends=(aspell-en id3lib sqlite
-            'python-requests: enable search'
-            'python-bottle: enable uprcl media server'
-            'python-mutagen: enable uprcl media server' 
-            'python-waitress: enable uprcl media server'
-            'recoll: enable uprcl media server') 
+depends=(
+  'python'
+  'libmpdclient'
+  'libupnpp>=0.25.0'
+  'libmicrohttpd'
+  'jsoncpp'
+)
+makedepends=(
+  'python-setuptools'
+  'python-requests'
+  'python-bottle'
+  'python-mutagen'
+  'aspell-en'
+  'id3lib'
+  'python-waitress'
+  'sqlite'
+)
+optdepends=(
+  'aspell-en'
+  'id3lib'
+  'sqlite'
+  'python-requests: enable search'
+  'python-bottle: enable uprcl media server'
+  'python-mutagen: enable uprcl media server'
+  'python-waitress: enable uprcl media server'
+  'recoll: enable uprcl media server'
+)
 install=upmpdcli.install
 source=("http://www.lesbonscomptes.com/upmpdcli/downloads/${pkgname}-${pkgver}.tar.gz"
         'upmpdcli.install'
         'upmpdcli.service'
         'upmpdcli.conf'
         'archphile.png')
-sha256sums=('05dd8ed75d52af87e6d8b7113eece657937d8b2dee9ddb43ffe8f01a78a9b157'
+sha256sums=('55e3d27bea5bef4560f319137f1a5c7d08abbba5a9aae90ee3240903fdb8c3e4'
             '26e445afa98f8177ea5202717fe3ac1cda6bb3d4a234a943d918fde4b04bc697'
             'c6470fa5d7e4c2ecd40d026fed37df1c860168dcb7ee92204584657deb7a8931'
             '4ef07303a1aef48eb26c938951bc0f699d46c1600a5c0a877f4f984e701640cb'
@@ -40,6 +59,7 @@ build() {
 }
 
 package() {
+  depends+=(libupnpp.so)
   cd "$srcdir/$pkgname-$pkgver"
   make DESTDIR="$pkgdir" install
   install -Dm644 systemd/upmpdcli.service ${pkgdir}/usr/lib/systemd/system/upmpdcli.service
