--- a/mpd-sima/PKGBUILD
+++ b/mpd-sima/PKGBUILD
@@ -8,10 +8,10 @@
 pkgname=mpd-sima
 _pkgname=MPD_sima
 pkgver=0.18.2
-pkgrel=1
+pkgrel=2
 pkgdesc="Automagically add title to mpd playlist based on last.fm recomendations"
 arch=('x86_64' 'armv7h' 'aarch64')
-url="http://kaliko.me/code/mpd-sima/"
+url="http://kaliko.me/mpd-sima/"
 license=('GPL')
 depends=('python>=3.2' 'python-musicpd>=0.4.1' 'python-requests>=2.4.0')
 makedepends=('python-setuptools')
