--- a/cava/PKGBUILD
+++ b/cava/PKGBUILD
@@ -30,7 +30,7 @@ makedepends=(
   'autoconf'
   'libpipewire'
 )
-source=("https://github.com/karlstav/cava/archive/${pkgver}.tar.gz")
+source=("$pkgname-$pkgver.tar.gz::https://github.com/karlstav/cava/archive/${pkgver}.tar.gz")
 sha512sums=('35ee4821e094c2ea567012329c21a8283450100eada4f7e33f7decd935db94adbefd2a2a41801e0ef49eea0dcd859c397c5b3dc7316f0640394d67e3b658876c')
 
 build() {
